deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortune-cookie
  labels:
    app.kubernetes.io/name: fortune-cookie
spec:
  selector:
    app.kubernetes.io/name: fortune-cookie
  ports:
    - name: http
      port: 8080
      targetPort: 8080
